--- a/templates/contrats/detail.html
+++ b/templates/contrats/detail.html
@@ -63,11 +63,8 @@
                         <i class="bi bi-pencil"></i> Modifier
                     </a>
                     {% if not contrat.est_resilie %}
-                        <a href="{% url 'contrats:resilier' contrat.pk %}" class="btn btn-danger">
-                            <i class="bi bi-x-circle"></i> Résilier
-                        </a>
-                        <a href="{% url 'contrats:creer_resiliation' contrat.pk %}" class="btn btn-outline-danger">
-                            <i class="bi bi-file-earmark-x"></i> Créer Résiliation
+                        <a href="{% url 'contrats:creer_resiliation' contrat.pk %}" class="btn btn-danger">
+                            <i class="bi bi-x-circle"></i> Résilier le Contrat
                         </a>
                     {% else %}
                         <span class="badge bg-danger">Contrat résilié</span>
