--- a/templates/contrats/selectionner_contrat_resiliation.html
+++ b/templates/contrats/selectionner_contrat_resiliation.html
@@ -226,7 +226,7 @@
                                         <i class="bi bi-eye"></i>
                                     </a>
                                     
-                                    <a href="{% url 'contrats:creer_resiliation' contrat.pk %}" 
+                                    <a href="{% url 'contrats:resilier' contrat.pk %}" 
                                        class="btn btn-sm btn-danger" 
                                        title="Résilier ce contrat">
                                         <i class="bi bi-x-circle"></i> Résilier
